# nunchaku_lite

./: .gitignore  .readthedocs.yml  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: cpu-tests.yml  docs.yml  wheels.yml
benchmarks/: README.md  benchmark_flux.py  benchmark_flux2.py  benchmark_qwen_image.py  benchmark_z_image.py
docs/: api.md  deployment.md  development.md  index.md  installation.md  overview.md  quick_start.md  release_wheels.md  roadmap.md
docs/models/: sdxl.md  z_image.md
examples/: flux.md  flux2.md  qwen_image.md  sdxl.md  z_image.md
native/src/kernels/zgemm/: zgemm.h
nunchaku_lite/: __init__.py  core.py  utils.py
nunchaku_lite/adapters/: common.py  flux.py  flux2.py  qwen_image.py  sdxl.py  z_image.py
nunchaku_lite/csrc/: ops_lite.h  pybind.cpp
nunchaku_lite/lora/: __init__.py  base.py  conversion.py  flux.py  peft.py  qwen_image.py
nunchaku_lite/models/: __init__.py  linear.py
nunchaku_lite/ops/: __init__.py  attention.py  fused.py  gemm.py  gemv.py  quantize.py
src/nunchaku_lite/: __init__.py  __version__.py  core.py  linear.py  manifest.py  utils.py
src/nunchaku_lite/adapters/: __init__.py  common.py  flux.py  flux2.py  manifest.py  qwen_image.py  sdxl.py  z_image.py
src/nunchaku_lite/csrc/: ops_lite.h
src/nunchaku_lite/lora/: __init__.py  base.py  common.py  flux.py  flux2.py  qwen_image.py  z_image.py
src/nunchaku_lite/lora/core/: __init__.py  convert.py  layout.py  peft.py  runtime.py
src/nunchaku_lite/models/: __init__.py
src/nunchaku_lite/ops/: __init__.py  fused.py  gemm.py  gemv.py  quantize.py
tests/: test_core.py  test_flux2_adapter.py  test_flux2_lora.py  test_flux_adapter.py  test_flux_lora.py  test_full_inference_flux.py  test_full_inference_flux2.py  test_full_inference_qwen_image.py  test_full_inference_z_image.py  test_manifest_adapter.py  test_qwen_image_adapter.py  test_qwen_image_lora.py  test_sdxl_adapter.py  test_z_image_adapter.py  test_z_image_lora.py
tools/wheels/: install_cuda_linux.sh  repair_torch_wheel.sh  test_wheel_import.py
