[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "ninja",
  "packaging>=23",
  "setuptools",
  "torch>=2.7",
  "wheel",
]

[project]
name = "nunchaku_lite"
description = "Lite plugin runtime for applying Nunchaku v2 quantized transformer weights to Diffusers pipelines."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dynamic = [ "version" ]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "accelerate>=0.31",
  "diffusers>=0.36",
  "huggingface-hub>=0.34",
  "packaging>=23",
  "peft",
  "safetensors",
  "torch>=2.7",
  "transformers>=4.41.2",
]

[tool.black]
line-length = 120
target-version = [ 'py311' ]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
pythonpath = [ "src" ]
markers = [
  "full_inference: GPU/network-dependent end-to-end inference tests",
]
